# kamishirasawa

./: .gitignore  family.kamidb  foo.py  kanji_by_grade.json  kanji_by_grade.tsv  people.kamidb  people.tsv  pyproject.toml  requirements.txt
kamishirasawa/: animals.kamidb  app.py  foo.py  games.py  gui.py  hiragana_chart.py  kamishirasawa.py  kanji_by_grade.kamidb  kanji_util.py  keine.py  lang_utils.py  tts.py  utils.py
kamishirasawa/dpg/: app.py  kana.py
